--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npm run dev:demo",
     "dev": "npm run dev:demo",
     "dev:demo": "ng serve ng-vcl-demo --plugin ~webpack.custom.js",
-    "dev:ng-vcl": "ng build @ng-vcl/ng-vcl --watch",
+    "dev:ng-vcl": "ng build @vcl/ng-vcl --watch",
     "dev:wc": "ng serve ng-vcl-wc-test --plugin ~webpack.custom.js",
     "docs": "cross-env-shell npm run docs:set-env npm-run-all docs:set-env docs:clean docs:pull-current docs:build",
     "docs:set-env": "cross-env-shell GIT_BRANCH=${GIT_BRANCH:-$(git rev-parse --abbrev-ref HEAD)}",
@@ -15,19 +15,17 @@
     "docs:clean": "rimraf docs",
     "docs:lint": "ng lint ng-vcl-demo",
     "docs:pull-current": "git clone -b gh-pages --single-branch https://github.com/ng-vcl/ng-vcl.git docs",
-    "test": "ng test @ng-vcl/ng-vcl --watch=false",
+    "test": "ng test @vcl/ng-vcl --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:clean": "rimraf dist/ng-vcl",
-    "build:ng-vcl/ng-vcl": "ng build @ng-vcl/ng-vcl",
-    "postbuild:ng-vcl/ng-vcl": "cp lib/ng-vcl/*.scss dist/ng-vcl/ng-vcl",
-    "build:ng-vcl": "npm-run-all build:ng-vcl/ng-vcl",
+    "build:ng-vcl": "ng build @vcl/ng-vcl",
+    "postbuild:ng-vcl": "cp lib/ng-vcl/*.scss dist/ng-vcl",
     "build": "npm-run-all build:clean build:ng-vcl",
-    "build:wc": "ng build ng-vcl-wc-test --prod --output-hashing none --single-bundle false --plugin ~webpack.custom.js",
     "clean": "npm-run-all build:clean docs:clean",
     "markdownlint": "markdownlint -c markdownlint.json lib/",
-    "publish": "cd dist/ng-vcl/ng-vcl && npm publish",
-    "publish:next": "cd dist/ng-vcl/ng-vcl && npm publish --tag next",
+    "publish": "cd dist/ng-vcl && npm publish",
+    "publish:next": "cd dist/ng-vcl && npm publish --tag next",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
@@ -43,7 +41,7 @@
     "@angular/router": "^9.0.0-rc.10",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@mdi/font": "^4.8.95",
-    "@vcl/vcl": "^1.0.0-beta.2",
+    "@vcl/vcl": "^1.0.0-beta.5",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "document-register-element": "1.14.3",
