--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^9.0.0-rc.10",
+    "@angular/animations": "^9.0.0-rc.12",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^9.0.0-rc.10",
-    "@angular/compiler": "^9.0.0-rc.10",
-    "@angular/core": "^9.0.0-rc.10",
-    "@angular/elements": "^9.0.0-rc.10",
-    "@angular/forms": "^9.0.0-rc.10",
-    "@angular/platform-browser": "^9.0.0-rc.10",
-    "@angular/platform-browser-dynamic": "^9.0.0-rc.10",
-    "@angular/router": "^9.0.0-rc.10",
+    "@angular/common": "^9.0.0-rc.12",
+    "@angular/compiler": "^9.0.0-rc.12",
+    "@angular/core": "^9.0.0-rc.12",
+    "@angular/elements": "^9.0.0-rc.12",
+    "@angular/forms": "^9.0.0-rc.12",
+    "@angular/platform-browser": "^9.0.0-rc.12",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.12",
+    "@angular/router": "^9.0.0-rc.12",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@mdi/font": "^4.8.95",
     "@vcl/vcl": "^1.0.0-beta.5",
@@ -55,19 +55,19 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.0-rc.10",
-    "@angular-devkit/build-ng-packagr": "^0.900.0-rc.10",
-    "@angular/cli": "^9.0.0-rc.10",
-    "@angular/compiler-cli": "^9.0.0-rc.10",
-    "@angular/language-service": "^9.0.0-rc.10",
-    "@types/jasmine": "^3.5.1",
+    "@angular-devkit/build-angular": "^0.900.0-rc.12",
+    "@angular-devkit/build-ng-packagr": "^0.900.0-rc.12",
+    "@angular/cli": "^9.0.0-rc.12",
+    "@angular/compiler-cli": "^9.0.0-rc.12",
+    "@angular/language-service": "^9.0.0-rc.12",
+    "@types/jasmine": "^3.5.2",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.1.8",
+    "@types/node": "^13.7.0",
     "codelyzer": "~5.2.1",
     "conventional-changelog-cli": "^2.0.31",
     "cross-env": "^6.0.3",
     "css-loader": "^3.4.2",
-    "cz-conventional-changelog": "^3.0.2",
+    "cz-conventional-changelog": "^3.1.0",
     "git-directory-deploy": "^1.5.1",
     "highlight-loader": "^0.7.3",
     "jasmine-core": "^3.5.0",
@@ -81,7 +81,7 @@
     "markdown-loader": "^5.1.0",
     "ng-packagr": "^9.0.0-rc.7",
     "npm-run-all": "^4.1.5",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.3",
     "ts-node": "^8.6.2",
     "tsickle": "0.38.0",
     "tslint": "^6.0.0",
