--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^9.0.0-rc.14",
+    "@angular/animations": "^9.0.0",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^9.0.0-rc.14",
-    "@angular/compiler": "^9.0.0-rc.14",
-    "@angular/core": "^9.0.0-rc.14",
-    "@angular/elements": "^9.0.0-rc.14",
-    "@angular/forms": "^9.0.0-rc.14",
-    "@angular/platform-browser": "^9.0.0-rc.14",
-    "@angular/platform-browser-dynamic": "^9.0.0-rc.14",
-    "@angular/router": "^9.0.0-rc.14",
+    "@angular/common": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/elements": "^9.0.0",
+    "@angular/forms": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
+    "@angular/router": "^9.0.0",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@mdi/font": "^4.9.95",
     "@vcl/vcl": "^1.0.0-beta.5",
@@ -55,11 +55,11 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.0-rc.14",
-    "@angular-devkit/build-ng-packagr": "^0.900.0-rc.14",
-    "@angular/cli": "^9.0.0-rc.14",
-    "@angular/compiler-cli": "^9.0.0-rc.14",
-    "@angular/language-service": "^9.0.0-rc.14",
+    "@angular-devkit/build-angular": "^0.900.1",
+    "@angular-devkit/build-ng-packagr": "^0.900.1",
+    "@angular/cli": "^9.0.1",
+    "@angular/compiler-cli": "^9.0.0",
+    "@angular/language-service": "^9.0.0",
     "@types/jasmine": "^3.5.2",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^13.7.0",
