--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "@angular/animations": "^9.0.0",
-    "@angular/cdk": "^8.2.3",
+    "@angular/cdk": "^9.0.0",
     "@angular/common": "^9.0.0",
     "@angular/compiler": "^9.0.0",
     "@angular/core": "^9.0.0",
@@ -39,16 +39,16 @@
     "@angular/platform-browser": "^9.0.0",
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@angular/router": "^9.0.0",
-    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@mdi/font": "^4.9.95",
-    "@vcl/vcl": "^1.0.0-beta.5",
+    "@vcl/vcl": "^1.0.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "document-register-element": "1.14.3",
     "fuse.js": "^3.4.6",
     "hammerjs": "^2.0.8",
     "jsonschema": "^1.2.5",
-    "ngx-build-plus": "^9.0.2",
+    "ngx-build-plus": "^9.0.6",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -60,12 +60,12 @@
     "@angular/cli": "^9.0.1",
     "@angular/compiler-cli": "^9.0.0",
     "@angular/language-service": "^9.0.0",
-    "@types/jasmine": "^3.5.2",
+    "@types/jasmine": "^3.5.3",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^13.7.0",
     "codelyzer": "~5.2.1",
     "conventional-changelog-cli": "^2.0.31",
-    "cross-env": "^6.0.3",
+    "cross-env": "^7.0.0",
     "css-loader": "^3.4.2",
     "cz-conventional-changelog": "^3.1.0",
     "git-directory-deploy": "^1.5.1",
@@ -75,8 +75,8 @@
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^3.1.0",
-    "karma-jasmine-html-reporter": "^1.5.1",
+    "karma-jasmine": "^3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
     "lerna": "^3.20.2",
     "markdown-loader": "^5.1.0",
     "ng-packagr": "^9.0.0-rc.7",
