--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^9.0.0",
-    "@angular/cdk": "^9.0.0",
-    "@angular/common": "^9.0.0",
-    "@angular/compiler": "^9.0.0",
-    "@angular/core": "^9.0.0",
-    "@angular/elements": "^9.0.0",
-    "@angular/forms": "^9.0.0",
-    "@angular/platform-browser": "^9.0.0",
-    "@angular/platform-browser-dynamic": "^9.0.0",
-    "@angular/router": "^9.0.0",
+    "@angular/animations": "^9.0.5",
+    "@angular/cdk": "^9.1.1",
+    "@angular/common": "^9.0.5",
+    "@angular/compiler": "^9.0.5",
+    "@angular/core": "^9.0.5",
+    "@angular/elements": "^9.0.5",
+    "@angular/forms": "^9.0.5",
+    "@angular/platform-browser": "^9.0.5",
+    "@angular/platform-browser-dynamic": "^9.0.5",
+    "@angular/router": "^9.0.5",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@mdi/font": "^4.9.95",
     "@vcl/vcl": "^1.0.0",
@@ -55,11 +55,11 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.1",
-    "@angular-devkit/build-ng-packagr": "^0.900.1",
-    "@angular/cli": "^9.0.1",
-    "@angular/compiler-cli": "^9.0.0",
-    "@angular/language-service": "^9.0.0",
+    "@angular-devkit/build-angular": "^0.900.5",
+    "@angular-devkit/build-ng-packagr": "^0.900.5",
+    "@angular/cli": "^9.0.5",
+    "@angular/compiler-cli": "^9.0.5",
+    "@angular/language-service": "^9.0.5",
     "@types/jasmine": "^3.5.3",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^13.7.0",
@@ -79,7 +79,7 @@
     "karma-jasmine-html-reporter": "^1.5.2",
     "lerna": "^3.20.2",
     "markdown-loader": "^5.1.0",
-    "ng-packagr": "^9.0.0-rc.7",
+    "ng-packagr": "^9.0.2",
     "npm-run-all": "^4.1.5",
     "protractor": "^5.4.3",
     "ts-node": "^8.6.2",
