--- a/lib/ng-vcl/tsconfig.lib.json
+++ b/lib/ng-vcl/tsconfig.lib.json
@@ -24,6 +24,10 @@
     "enableResourceInlining": true,
     "enableIvy": false
   },
+  "files": [
+    "main.ts",
+    "polyfills.ts"
+  ],
   "exclude": [
     "src/test.ts",
     "**/*.spec.ts"
