--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "ng": "ng",
     "start": "npm run dev:demo",
     "dev": "npm run dev:demo",
-    "dev:demo": "ng serve ng-vcl-demo --plugin ~webpack.custom.js",
+    "dev:demo": "ng serve ng-vcl-demo",
     "dev:ng-vcl": "ng build @vcl/ng-vcl --watch",
-    "dev:wc": "ng serve ng-vcl-wc-test --plugin ~webpack.custom.js",
+    "dev:wc": "ng serve ng-vcl-wc-test",
     "docs": "cross-env-shell npm run docs:set-env npm-run-all docs:set-env docs:clean docs:pull-current docs:build",
     "docs:set-env": "cross-env-shell GIT_BRANCH=${GIT_BRANCH:-$(git rev-parse --abbrev-ref HEAD)}",
-    "docs:build": "cross-env-shell ng build --prod --outputPath=docs/${GIT_BRANCH} --plugin ~webpack.custom.js",
+    "docs:build": "cross-env-shell ng build --prod --outputPath=docs/${GIT_BRANCH}",
     "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
     "docs:clean": "rimraf docs",
     "docs:lint": "ng lint ng-vcl-demo",
@@ -29,64 +29,61 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^9.1.11",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "^9.1.11",
-    "@angular/compiler": "^9.1.11",
-    "@angular/core": "^9.1.11",
-    "@angular/elements": "^9.1.11",
-    "@angular/forms": "^9.1.11",
-    "@angular/platform-browser": "^9.1.11",
-    "@angular/platform-browser-dynamic": "^9.1.11",
-    "@angular/router": "^9.1.11",
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "@mdi/font": "^4.9.95",
-    "@vcl/vcl": "^2.0.0-alpha.6",
-    "bootstrap": "^4.4.1",
-    "core-js": "^3.6.4",
+    "@angular/animations": "^10.0.3",
+    "@angular/cdk": "^10.0.1",
+    "@angular/common": "^10.0.3",
+    "@angular/compiler": "^10.0.3",
+    "@angular/core": "^10.0.3",
+    "@angular/elements": "^10.0.3",
+    "@angular/forms": "^10.0.3",
+    "@angular/platform-browser": "^10.0.3",
+    "@angular/platform-browser-dynamic": "^10.0.3",
+    "@angular/router": "^10.0.3",
+    "@fortawesome/fontawesome-free": "^5.13.1",
+    "@mdi/font": "^5.3.45",
+    "@vcl/vcl": "^2.0.0-beta.1",
+    "bootstrap": "^4.5.0",
+    "core-js": "^3.6.5",
     "document-register-element": "1.14.3",
-    "fuse.js": "^3.6.1",
+    "fuse.js": "^6.4.0",
     "hammerjs": "^2.0.8",
-    "jsonschema": "^1.2.5",
-    "ngx-build-plus": "^9.0.6",
+    "jsonschema": "^1.2.6",
+    "ngx-markdown": "^10.0.0",
     "normalize.css": "^8.0.1",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.11.1",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.9",
-    "@angular-devkit/build-ng-packagr": "^0.901.9",
-    "@angular/cli": "^9.1.9",
-    "@angular/compiler-cli": "^9.1.11",
-    "@angular/language-service": "^9.1.11",
-    "@types/jasmine": "^3.5.10",
+    "@angular-devkit/build-angular": "^0.1000.1",
+    "@angular-devkit/build-ng-packagr": "^0.1000.1",
+    "@angular/cli": "^10.0.1",
+    "@angular/compiler-cli": "^10.0.3",
+    "@angular/language-service": "^10.0.3",
+    "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.7.0",
-    "codelyzer": "~5.2.1",
-    "conventional-changelog-cli": "^2.0.31",
+    "@types/node": "^14.0.23",
+    "codelyzer": "~6.0.0",
+    "conventional-changelog-cli": "^2.0.34",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.4.2",
-    "cz-conventional-changelog": "^3.1.0",
+    "css-loader": "^3.6.0",
+    "cz-conventional-changelog": "^3.2.0",
     "git-directory-deploy": "^1.5.1",
-    "highlight-loader": "^0.7.3",
     "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "lerna": "^3.20.2",
-    "markdown-loader": "^5.1.0",
-    "ng-packagr": "^9.0.3",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "lerna": "^3.22.1",
+    "ng-packagr": "^10.0.0",
     "npm-run-all": "^4.1.5",
-    "protractor": "^5.4.3",
-    "ts-node": "^8.8.1",
-    "tsickle": "0.38.0",
-    "tslint": "^6.1.0",
-    "typescript": "^3.7.5",
-    "webpack-merge": "^4.2.2"
+    "protractor": "^7.0.0",
+    "ts-node": "^8.10.2",
+    "tsickle": "0.39.1",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.6"
   },
   "config": {
     "commitizen": {
