--- a/lib/ng-vcl/package.json
+++ b/lib/ng-vcl/package.json
@@ -1,22 +1,20 @@
 {
   "name": "@vcl/ng-vcl",
   "version": "2.0.0-beta.1",
-  "description": "A comprehensive library of components for Angular 9+ with VCL based styling",
+  "description": "A comprehensive library of components for Angular with VCL based styling",
   "repository": {
     "type": "git",
     "url": "https://github.com/ng-vcl/ng-vcl.git"
   },
   "author": "The ng-vcl authors",
   "license": "MIT",
-  "sass": "index.scss",
-  "scss": "index.scss",
   "peerDependencies": {
-    "@angular/cdk": "^9",
-    "@angular/common": "^9",
-    "@angular/animations": "^9",
-    "@angular/core": "^9",
-    "@angular/forms": "^9",
-    "@angular/router": "^9",
-    "rxjs": "^6.5.2"
+    "@angular/cdk": "^10",
+    "@angular/common": "^10",
+    "@angular/animations": "^10",
+    "@angular/core": "^10",
+    "@angular/forms": "^10",
+    "@angular/router": "^10",
+    "rxjs": "^6.6.0"
   }
 }
