chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -28,60 +28,60 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^10.0.5",
-    "@angular/cdk": "^10.1.0",
-    "@angular/common": "^10.0.5",
-    "@angular/compiler": "^10.0.5",
-    "@angular/core": "^10.0.5",
-    "@angular/elements": "^10.0.5",
-    "@angular/forms": "^10.0.5",
-    "@angular/platform-browser": "^10.0.5",
-    "@angular/platform-browser-dynamic": "^10.0.5",
-    "@angular/router": "^10.0.5",
+    "@angular/animations": "^10.0.10",
+    "@angular/cdk": "^10.1.3",
+    "@angular/common": "^10.0.10",
+    "@angular/compiler": "^10.0.10",
+    "@angular/core": "^10.0.10",
+    "@angular/elements": "^10.0.10",
+    "@angular/forms": "^10.0.10",
+    "@angular/platform-browser": "^10.0.10",
+    "@angular/platform-browser-dynamic": "^10.0.10",
+    "@angular/router": "^10.0.10",
     "@fortawesome/fontawesome-free": "^5.14.0",
-    "@mdi/font": "^5.3.45",
+    "@mdi/font": "^5.5.55",
     "@vcl/vcl": "^2.0.0-beta.1",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
-    "document-register-element": "1.14.3",
-    "fuse.js": "^6.4.0",
+    "document-register-element": "^1.14.5",
+    "fuse.js": "^6.4.1",
     "hammerjs": "^2.0.8",
     "jsonschema": "^1.2.6",
-    "ngx-markdown": "^10.0.0",
+    "ngx-markdown": "^10.1.1",
     "normalize.css": "^8.0.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "rxjs": "^6.6.2",
+    "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.4",
-    "@angular-devkit/build-ng-packagr": "^0.1000.4",
-    "@angular/cli": "^10.0.4",
-    "@angular/compiler-cli": "^10.0.5",
-    "@angular/language-service": "^10.0.5",
-    "@types/jasmine": "^3.5.11",
+    "@angular-devkit/build-angular": "^0.1000.6",
+    "@angular-devkit/build-ng-packagr": "^0.1000.6",
+    "@angular/cli": "^10.0.6",
+    "@angular/compiler-cli": "^10.0.10",
+    "@angular/language-service": "^10.0.10",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.0.25",
+    "@types/node": "^14.6.0",
     "codelyzer": "~6.0.0",
-    "conventional-changelog-cli": "^2.0.34",
+    "conventional-changelog-cli": "^2.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
     "cz-conventional-changelog": "^3.2.0",
     "git-directory-deploy": "^1.5.1",
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "~5.0.2",
-    "karma": "~5.1.0",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "lerna": "^3.22.1",
-    "ng-packagr": "^10.0.3",
+    "ng-packagr": "^10.0.4",
     "npm-run-all": "^4.1.5",
     "protractor": "^7.0.0",
     "ts-node": "^8.10.2",
     "tsickle": "0.39.1",
-    "tslint": "^6.1.2",
+    "tslint": "^6.1.3",
     "typescript": "^3.9.7"
   },
   "config": {
