--- a/lib/ng-vcl/package.json
+++ b/lib/ng-vcl/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vcl/ng-vcl",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0",
   "description": "A comprehensive library of components for Angular with VCL based styling",
   "repository": {
     "type": "git",
