--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-vcl",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0",
   "scripts": {
     "ng": "ng",
     "start": "npm run dev:demo",
@@ -28,19 +28,19 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^10.0.10",
+    "@angular/animations": "^10.0.11",
     "@angular/cdk": "^10.1.3",
-    "@angular/common": "^10.0.10",
-    "@angular/compiler": "^10.0.10",
-    "@angular/core": "^10.0.10",
-    "@angular/elements": "^10.0.10",
-    "@angular/forms": "^10.0.10",
-    "@angular/platform-browser": "^10.0.10",
-    "@angular/platform-browser-dynamic": "^10.0.10",
-    "@angular/router": "^10.0.10",
+    "@angular/common": "^10.0.11",
+    "@angular/compiler": "^10.0.11",
+    "@angular/core": "^10.0.11",
+    "@angular/elements": "^10.0.11",
+    "@angular/forms": "^10.0.11",
+    "@angular/platform-browser": "^10.0.11",
+    "@angular/platform-browser-dynamic": "^10.0.11",
+    "@angular/router": "^10.0.11",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@mdi/font": "^5.5.55",
-    "@vcl/vcl": "^2.0.0-beta.1",
+    "@vcl/vcl": "^2.0.0",
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
     "document-register-element": "^1.14.5",
@@ -57,8 +57,8 @@
     "@angular-devkit/build-angular": "^0.1000.6",
     "@angular-devkit/build-ng-packagr": "^0.1000.6",
     "@angular/cli": "^10.0.6",
-    "@angular/compiler-cli": "^10.0.10",
-    "@angular/language-service": "^10.0.10",
+    "@angular/compiler-cli": "^10.0.11",
+    "@angular/language-service": "^10.0.11",
     "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.6.0",
