--- a/demo/tsconfig.app.json
+++ b/demo/tsconfig.app.json
@@ -4,6 +4,13 @@
     "outDir": "../out-tsc/app",
     "types": ["node"]
   },
+  "files": [ 
+    "./main.ts", 
+    "./polyfills.ts" 
+  ], 
+  "include": [ 
+    "./**/*.d.ts" 
+] ,
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
