--- a/package.json
+++ b/package.json
@@ -38,19 +38,19 @@
     "@angular/platform-browser": "^10.0.11",
     "@angular/platform-browser-dynamic": "^10.0.11",
     "@angular/router": "^10.0.11",
-    "@fortawesome/fontawesome-free": "^5.14.0",
-    "@mdi/font": "^5.5.55",
-    "@vcl/vcl": "^2.0.0",
-    "bootstrap": "^4.5.2",
-    "core-js": "^3.6.5",
-    "document-register-element": "^1.14.5",
-    "fuse.js": "^6.4.1",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@mdi/font": "^5.8.55",
+    "@vcl/vcl": "^2.1.1",
+    "bootstrap": "^4.5.3",
+    "core-js": "^3.8.0",
+    "document-register-element": "^1.14.10",
+    "fuse.js": "^6.4.3",
     "hammerjs": "^2.0.8",
-    "jsonschema": "^1.2.6",
+    "jsonschema": "^1.4.0",
     "ngx-markdown": "^10.1.1",
     "normalize.css": "^8.0.1",
-    "rxjs": "^6.6.2",
-    "tslib": "^2.0.1",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
@@ -59,18 +59,18 @@
     "@angular/cli": "^10.0.6",
     "@angular/compiler-cli": "^10.0.11",
     "@angular/language-service": "^10.0.11",
-    "@types/jasmine": "^3.5.12",
+    "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.6.0",
-    "codelyzer": "~6.0.0",
-    "conventional-changelog-cli": "^2.1.0",
-    "cross-env": "^7.0.2",
+    "@types/node": "^14.14.10",
+    "codelyzer": "^6.0.1",
+    "conventional-changelog-cli": "^2.1.1",
+    "cross-env": "^7.0.3",
     "css-loader": "^3.6.0",
-    "cz-conventional-changelog": "^3.2.0",
+    "cz-conventional-changelog": "^3.3.0",
     "git-directory-deploy": "^1.5.1",
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "~5.0.2",
-    "karma": "^5.1.1",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^3.3.1",
