--- a/package.json
+++ b/package.json
@@ -38,19 +38,18 @@
     "@angular/platform-browser": "^10.0.11",
     "@angular/platform-browser-dynamic": "^10.0.11",
     "@angular/router": "^10.0.11",
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "@mdi/font": "^5.8.55",
-    "@vcl/vcl": "^2.1.1",
-    "bootstrap": "^4.5.3",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@mdi/font": "^5.9.55",
+    "@vcl/vcl": "^2.1.2",
     "core-js": "^3.8.1",
     "document-register-element": "^1.14.10",
-    "fuse.js": "^6.4.3",
+    "fuse.js": "^6.4.6",
     "hammerjs": "^2.0.8",
     "jsonschema": "^1.4.0",
     "ngx-markdown": "^10.1.1",
     "normalize.css": "^8.0.1",
-    "rxjs": "^6.6.3",
-    "tslib": "^2.0.3",
+    "rxjs": "^6.6.6",
+    "tslib": "^2.1.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
@@ -59,9 +58,9 @@
     "@angular/cli": "^10.0.6",
     "@angular/compiler-cli": "^10.0.11",
     "@angular/language-service": "^10.0.11",
-    "@types/jasmine": "^3.6.2",
+    "@types/jasmine": "^3.6.4",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.14.13",
+    "@types/node": "^14.14.31",
     "codelyzer": "^6.0.1",
     "conventional-changelog-cli": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -69,17 +68,17 @@
     "cz-conventional-changelog": "^3.3.0",
     "git-directory-deploy": "^1.5.1",
     "jasmine-core": "^3.6.0",
-    "jasmine-spec-reporter": "~5.0.2",
-    "karma": "^5.2.3",
+    "jasmine-spec-reporter": "^6.0.0",
+    "karma": "^6.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^3.3.1",
+    "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "lerna": "^3.22.1",
+    "lerna": "^4.0.0",
     "ng-packagr": "^10.0.4",
     "npm-run-all": "^4.1.5",
     "protractor": "^7.0.0",
-    "ts-node": "^8.10.2",
+    "ts-node": "^9.1.1",
     "tsickle": "0.39.1",
     "tslint": "^6.1.3",
     "typescript": "^3.9.7"
