--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^10.0.11",
+    "@angular/animations": "^11.2.10",
     "@angular/cdk": "^10.1.3",
-    "@angular/common": "^10.0.11",
-    "@angular/compiler": "^10.0.11",
-    "@angular/core": "^10.0.11",
-    "@angular/elements": "^10.0.11",
-    "@angular/forms": "^10.0.11",
-    "@angular/platform-browser": "^10.0.11",
-    "@angular/platform-browser-dynamic": "^10.0.11",
-    "@angular/router": "^10.0.11",
+    "@angular/common": "^11.2.10",
+    "@angular/compiler": "^11.2.10",
+    "@angular/core": "^11.2.10",
+    "@angular/elements": "^11.2.10",
+    "@angular/forms": "^11.2.10",
+    "@angular/platform-browser": "^11.2.10",
+    "@angular/platform-browser-dynamic": "^11.2.10",
+    "@angular/router": "^11.2.10",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@mdi/font": "^5.9.55",
     "@vcl/vcl": "^2.1.2",
@@ -49,39 +49,39 @@
     "ngx-markdown": "^10.1.1",
     "normalize.css": "^8.0.1",
     "rxjs": "^6.6.6",
-    "tslib": "^2.1.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.6",
-    "@angular-devkit/build-ng-packagr": "^0.1000.6",
-    "@angular/cli": "^10.0.6",
-    "@angular/compiler-cli": "^10.0.11",
-    "@angular/language-service": "^10.0.11",
-    "@types/jasmine": "^3.6.4",
+    "@angular-devkit/build-angular": "^0.1102.9",
+    "@angular-devkit/core": "^11.2.9",
+    "@angular/cli": "^11.2.9",
+    "@angular/compiler-cli": "^11.2.10",
+    "@angular/language-service": "^11.2.10",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.14.31",
-    "codelyzer": "^6.0.1",
+    "codelyzer": "^6.0.0",
     "conventional-changelog-cli": "^2.1.1",
     "cross-env": "^7.0.3",
     "css-loader": "^3.6.0",
     "cz-conventional-changelog": "^3.3.0",
     "git-directory-deploy": "^1.5.1",
-    "jasmine-core": "^3.6.0",
-    "jasmine-spec-reporter": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "^6.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "lerna": "^4.0.0",
-    "ng-packagr": "^10.0.4",
+    "ng-packagr": "^11.2.4",
     "npm-run-all": "^4.1.5",
     "protractor": "^7.0.0",
     "ts-node": "^9.1.1",
     "tsickle": "0.39.1",
     "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
+    "typescript": ">=4.1.5 <4.2.0"
   },
   "config": {
     "commitizen": {
