--- a/package.json
+++ b/package.json
@@ -28,19 +28,19 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^11.2.10",
-    "@angular/cdk": "^10.1.3",
-    "@angular/common": "^11.2.10",
-    "@angular/compiler": "^11.2.10",
-    "@angular/core": "^11.2.10",
-    "@angular/elements": "^11.2.10",
-    "@angular/forms": "^11.2.10",
-    "@angular/platform-browser": "^11.2.10",
-    "@angular/platform-browser-dynamic": "^11.2.10",
-    "@angular/router": "^11.2.10",
+    "@angular/animations": "^12.2.3",
+    "@angular/cdk": "^12.2.3",
+    "@angular/common": "^12.2.3",
+    "@angular/compiler": "^12.2.3",
+    "@angular/core": "^12.2.3",
+    "@angular/elements": "^12.2.3",
+    "@angular/forms": "^12.2.3",
+    "@angular/platform-browser": "^12.2.3",
+    "@angular/platform-browser-dynamic": "^12.2.3",
+    "@angular/router": "^12.2.3",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@mdi/font": "^5.9.55",
-    "@vcl/vcl": "^2.1.2",
+    "@vcl/vcl": "^2.1.3",
     "core-js": "^3.8.1",
     "document-register-element": "^1.14.10",
     "fuse.js": "^6.4.6",
@@ -48,16 +48,19 @@
     "jsonschema": "^1.4.0",
     "ngx-markdown": "^10.1.1",
     "normalize.css": "^8.0.1",
+    "raw-loader": "^4.0.2",
     "rxjs": "^6.6.6",
+    "sass": "^1.38.1",
+    "sass-loader": "^12.1.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.9",
-    "@angular-devkit/core": "^11.2.9",
-    "@angular/cli": "^11.2.9",
-    "@angular/compiler-cli": "^11.2.10",
-    "@angular/language-service": "^11.2.10",
+    "@angular-devkit/build-angular": "^12.2.2",
+    "@angular-devkit/core": "^12.2.2",
+    "@angular/cli": "^12.2.2",
+    "@angular/compiler-cli": "^12.2.3",
+    "@angular/language-service": "^12.2.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.14.31",
@@ -81,7 +84,7 @@
     "ts-node": "^9.1.1",
     "tsickle": "0.39.1",
     "tslint": "^6.1.3",
-    "typescript": ">=4.1.5 <4.2.0"
+    "typescript": "^4.3.5"
   },
   "config": {
     "commitizen": {
