--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "sass": "^1.38.1",
     "sass-loader": "^12.1.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.2",
