feat(deps) upgrade to NG 13

--- a/lib/ng-vcl/tsconfig.lib.json
+++ b/lib/ng-vcl/tsconfig.lib.json
@@ -22,7 +22,7 @@
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
     "enableResourceInlining": true,
-    "enableIvy": false
+    "enableIvy": true
   },
   "files": [
     "main.ts",
