--- a/package.json
+++ b/package.json
@@ -28,67 +28,88 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^12.2.3",
-    "@angular/cdk": "^12.2.3",
-    "@angular/common": "^12.2.3",
-    "@angular/compiler": "^12.2.3",
-    "@angular/core": "^12.2.3",
-    "@angular/elements": "^12.2.3",
-    "@angular/forms": "^12.2.3",
-    "@angular/platform-browser": "^12.2.3",
-    "@angular/platform-browser-dynamic": "^12.2.3",
-    "@angular/router": "^12.2.3",
-    "@fortawesome/fontawesome-free": "^5.15.2",
-    "@mdi/font": "^5.9.55",
-    "@vcl/vcl": "^2.1.8",
-    "core-js": "^3.8.1",
+    "@angular/animations": "^13.2.0",
+    "@angular/cdk": "^13.2.0",
+    "@angular/common": "^13.2.0",
+    "@angular/compiler": "^13.2.0",
+    "@angular/core": "^13.2.0",
+    "@angular/elements": "^13.2.0",
+    "@angular/forms": "^13.2.0",
+    "@angular/platform-browser": "^13.2.0",
+    "@angular/platform-browser-dynamic": "^13.2.0",
+    "@angular/router": "^13.2.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@mdi/font": "^6.5.95",
+    "@vcl/vcl": "^2.1.10",
+    "core-js": "^3.20.3",
     "document-register-element": "^1.14.10",
-    "fuse.js": "^6.4.6",
+    "fuse.js": "^6.5.3",
     "hammerjs": "^2.0.8",
     "jsonschema": "^1.4.0",
-    "ngx-markdown": "^10.1.1",
+    "ngx-markdown": "^13.0.0",
     "normalize.css": "^8.0.1",
     "raw-loader": "^4.0.2",
-    "rxjs": "^6.6.6",
-    "sass": "^1.38.1",
-    "sass-loader": "^12.1.0",
-    "tslib": "^2.0.0",
+    "rxjs": "^7.5.2",
+    "sass": "^1.49.0",
+    "sass-loader": "^12.4.0",
+    "tslib": "^2.3.1",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.2",
-    "@angular-devkit/core": "^12.2.2",
-    "@angular/cli": "^12.2.2",
-    "@angular/compiler-cli": "^12.2.3",
-    "@angular/language-service": "^12.2.3",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.14.31",
-    "codelyzer": "^6.0.0",
-    "conventional-changelog-cli": "^2.1.1",
+    "@angular-devkit/build-angular": "^13.2.0",
+    "@angular-devkit/core": "^13.2.0",
+    "@angular/cli": "^13.2.0",
+    "@angular/compiler-cli": "^13.2.0",
+    "@angular/language-service": "^13.2.0",
+    "@types/jasmine": "~3.10.3",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^17.0.13",
+    "codelyzer": "^6.0.2",
+    "conventional-changelog-cli": "^2.2.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^3.6.0",
+    "css-loader": "^6.5.1",
     "cz-conventional-changelog": "^3.3.0",
     "git-directory-deploy": "^1.5.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.1.1",
+    "jasmine-core": "~4.0.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "^6.3.12",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "1.7.0",
     "lerna": "^4.0.0",
-    "ng-packagr": "^11.2.4",
+    "ng-packagr": "^13.2.1",
     "npm-run-all": "^4.1.5",
     "protractor": "^7.0.0",
-    "ts-node": "^9.1.1",
-    "tsickle": "0.39.1",
+    "ts-node": "^10.4.0",
+    "tsickle": "^0.46.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5"
+    "typescript": "^4.5.5"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "browserslist": [
+    "android 97",
+    "chrome 97",
+    "chrome 96",
+    "chrome 95",
+    "chrome 94",
+    "edge 97",
+    "edge 96",
+    "firefox 96",
+    "firefox 95",
+    "firefox 94",
+    "firefox 91",
+    "firefox 78",
+    "ios_saf 15.0-15.1",
+    "ios_saf 14.0-14.4",
+    "kaios 2.5",
+    "opera 82",
+    "safari 13.1",
+    "samsung 16.0",
+    "samsung 15.0"
+  ]
 }
