fix: fix build for ng 13

--- a/lib/ng-vcl/tsconfig.lib.json
+++ b/lib/ng-vcl/tsconfig.lib.json
@@ -25,8 +25,7 @@
     "enableResourceInlining": true
   },
   "files": [
-    "main.ts",
-    "polyfills.ts"
+    "src/public_api.ts"
   ],
   "exclude": [
     "src/test.ts",
