--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ng-vcl",
-  "version": "2.1.7",
+  "version": "2.1.8",
+  "private": true,
   "scripts": {
     "ng": "ng",
     "start": "npm run dev:demo",
