chore: fix marked import

--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
               "includePaths": ["node_modules"]
             },
             "scripts": [
-              "node_modules/marked/lib/marked.js",
+              "node_modules/marked/marked.min.js",
               "node_modules/prismjs/prism.js",
               "node_modules/prismjs/plugins/custom-class/prism-custom-class.min.js",
               "node_modules/prismjs/components/prism-typescript.min.js"
