--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-vcl",
-  "version": "2.1.8",
+  "version": "2.1.9",
   "private": true,
   "scripts": {
     "ng": "ng",
@@ -29,20 +29,20 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^13.2.1",
-    "@angular/cdk": "^13.2.1",
-    "@angular/common": "^13.2.1",
-    "@angular/compiler": "^13.2.1",
-    "@angular/core": "^13.2.1",
-    "@angular/elements": "^13.2.1",
-    "@angular/forms": "^13.2.1",
-    "@angular/platform-browser": "^13.2.1",
-    "@angular/platform-browser-dynamic": "^13.2.1",
-    "@angular/router": "^13.2.1",
-    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@angular/animations": "^13.2.4",
+    "@angular/cdk": "^13.2.4",
+    "@angular/common": "^13.2.4",
+    "@angular/compiler": "^13.2.4",
+    "@angular/core": "^13.2.4",
+    "@angular/elements": "^13.2.4",
+    "@angular/forms": "^13.2.4",
+    "@angular/platform-browser": "^13.2.4",
+    "@angular/platform-browser-dynamic": "^13.2.4",
+    "@angular/router": "^13.2.4",
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "@mdi/font": "^6.5.95",
-    "@vcl/vcl": "^2.1.14",
-    "core-js": "^3.21.0",
+    "@vcl/vcl": "^2.1.16",
+    "core-js": "^3.21.1",
     "document-register-element": "^1.14.10",
     "fuse.js": "^6.5.3",
     "hammerjs": "^2.0.8",
@@ -50,30 +50,30 @@
     "ngx-markdown": "^13.1.0",
     "normalize.css": "^8.0.1",
     "raw-loader": "^4.0.2",
-    "rxjs": "^7.5.2",
-    "sass": "^1.49.7",
-    "sass-loader": "^12.4.0",
+    "rxjs": "^7.5.4",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "tslib": "^2.3.1",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.2.2",
-    "@angular-devkit/core": "^13.2.2",
-    "@angular/cli": "^13.2.2",
-    "@angular/compiler-cli": "^13.2.1",
-    "@angular/language-service": "^13.2.1",
+    "@angular-devkit/build-angular": "^13.2.5",
+    "@angular-devkit/core": "^13.2.5",
+    "@angular/cli": "^13.2.5",
+    "@angular/compiler-cli": "^13.2.4",
+    "@angular/language-service": "^13.2.4",
     "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^17.0.15",
+    "@types/node": "^17.0.21",
     "codelyzer": "^6.0.2",
     "conventional-changelog-cli": "^2.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.6.0",
     "cz-conventional-changelog": "^3.3.0",
     "git-directory-deploy": "^1.5.1",
-    "jasmine-core": "~4.0.0",
+    "jasmine-core": "^4.0.1",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "^6.3.15",
+    "karma": "^6.3.16",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~4.0.1",
@@ -82,7 +82,7 @@
     "ng-packagr": "^13.2.1",
     "npm-run-all": "^4.1.5",
     "protractor": "^7.0.0",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.5.0",
     "tsickle": "^0.46.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
