--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^13.2.4",
-    "@angular/cdk": "^13.2.4",
-    "@angular/common": "^13.2.4",
-    "@angular/compiler": "^13.2.4",
-    "@angular/core": "^13.2.4",
-    "@angular/elements": "^13.2.4",
-    "@angular/forms": "^13.2.4",
-    "@angular/platform-browser": "^13.2.4",
-    "@angular/platform-browser-dynamic": "^13.2.4",
-    "@angular/router": "^13.2.4",
-    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@angular/animations": "^13.3.0",
+    "@angular/cdk": "^13.3.0",
+    "@angular/common": "^13.3.0",
+    "@angular/compiler": "^13.3.0",
+    "@angular/core": "^13.3.0",
+    "@angular/elements": "^13.3.0",
+    "@angular/forms": "^13.3.0",
+    "@angular/platform-browser": "^13.3.0",
+    "@angular/platform-browser-dynamic": "^13.3.0",
+    "@angular/router": "^13.3.0",
+    "@fortawesome/fontawesome-free": "^6.1.0",
     "@mdi/font": "^6.5.95",
     "@vcl/vcl": "^2.1.16",
     "core-js": "^3.21.1",
@@ -50,42 +50,42 @@
     "ngx-markdown": "^13.1.0",
     "normalize.css": "^8.0.1",
     "raw-loader": "^4.0.2",
-    "rxjs": "^7.5.4",
+    "rxjs": "^7.5.5",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "tslib": "^2.3.1",
-    "zone.js": "^0.11.4"
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.2.5",
-    "@angular-devkit/core": "^13.2.5",
-    "@angular/cli": "^13.2.5",
-    "@angular/compiler-cli": "^13.2.4",
-    "@angular/language-service": "^13.2.4",
-    "@types/jasmine": "~3.10.3",
+    "@angular-devkit/build-angular": "^13.3.0",
+    "@angular-devkit/core": "^13.3.0",
+    "@angular/cli": "^13.3.0",
+    "@angular/compiler-cli": "^13.3.0",
+    "@angular/language-service": "^13.3.0",
+    "@types/jasmine": "^4.0.0",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^17.0.21",
     "codelyzer": "^6.0.2",
     "conventional-changelog-cli": "^2.2.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.6.0",
+    "css-loader": "^6.7.1",
     "cz-conventional-changelog": "^3.3.0",
     "git-directory-deploy": "^1.5.1",
     "jasmine-core": "^4.0.1",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "^6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "^6.3.17",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "1.7.0",
     "lerna": "^4.0.0",
-    "ng-packagr": "^13.2.1",
+    "ng-packagr": "^13.3.0",
     "npm-run-all": "^4.1.5",
     "protractor": "^7.0.0",
-    "ts-node": "^10.5.0",
+    "ts-node": "^10.7.0",
     "tsickle": "^0.46.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.2"
   },
   "config": {
     "commitizen": {
