--- a/package.json
+++ b/package.json
@@ -29,18 +29,18 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^13.3.0",
-    "@angular/cdk": "^13.3.0",
-    "@angular/common": "^13.3.0",
-    "@angular/compiler": "^13.3.0",
-    "@angular/core": "^13.3.0",
-    "@angular/elements": "^13.3.0",
-    "@angular/forms": "^13.3.0",
-    "@angular/platform-browser": "^13.3.0",
-    "@angular/platform-browser-dynamic": "^13.3.0",
-    "@angular/router": "^13.3.0",
-    "@fortawesome/fontawesome-free": "^6.1.0",
-    "@mdi/font": "^6.5.95",
+    "@angular/animations": "^13.3.1",
+    "@angular/cdk": "^13.3.2",
+    "@angular/common": "^13.3.1",
+    "@angular/compiler": "^13.3.1",
+    "@angular/core": "^13.3.1",
+    "@angular/elements": "^13.3.1",
+    "@angular/forms": "^13.3.1",
+    "@angular/platform-browser": "^13.3.1",
+    "@angular/platform-browser-dynamic": "^13.3.1",
+    "@angular/router": "^13.3.1",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@mdi/font": "^6.6.96",
     "@vcl/vcl": "^2.1.17",
     "core-js": "^3.21.1",
     "document-register-element": "^1.14.10",
@@ -51,20 +51,20 @@
     "normalize.css": "^8.0.1",
     "raw-loader": "^4.0.2",
     "rxjs": "^7.5.5",
-    "sass": "^1.49.9",
+    "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
     "tslib": "^2.3.1",
     "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.0",
+    "@angular-devkit/build-angular": "^13.3.1",
     "@angular-devkit/core": "^13.3.0",
-    "@angular/cli": "^13.3.0",
-    "@angular/compiler-cli": "^13.3.0",
-    "@angular/language-service": "^13.3.0",
-    "@types/jasmine": "^4.0.0",
+    "@angular/cli": "^13.3.1",
+    "@angular/compiler-cli": "^13.3.1",
+    "@angular/language-service": "^13.3.1",
+    "@types/jasmine": "^4.0.2",
     "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^17.0.22",
+    "@types/node": "^17.0.23",
     "codelyzer": "^6.0.2",
     "conventional-changelog-cli": "^2.2.2",
     "cross-env": "^7.0.3",
@@ -76,7 +76,7 @@
     "karma": "^6.3.17",
     "karma-chrome-launcher": "^3.1.1",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "~4.0.1",
+    "karma-jasmine": "^4.0.2",
     "karma-jasmine-html-reporter": "1.7.0",
     "lerna": "^4.0.0",
     "ng-packagr": "^13.3.0",
@@ -85,7 +85,7 @@
     "ts-node": "^10.7.0",
     "tsickle": "^0.46.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.3"
   },
   "config": {
     "commitizen": {
