chore!: remove autocomplete component

--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,9 @@
             "main": "demo/main.ts",
             "polyfills": "demo/polyfills.ts",
             "tsConfig": "demo/tsconfig.app.json",
+            "sourceMap": true,
+            "optimization": false,
+            "buildOptimizer": false,
             "assets": [
               {
                 "glob": "**/*",
