--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "ts-node": "^10.7.0",
     "tsickle": "^0.46.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0"
   },
   "config": {
     "commitizen": {
