--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:wc": "ng serve ng-vcl-wc-test",
     "docs": "cross-env-shell npm run docs:set-env npm-run-all docs:set-env docs:clean docs:pull-current docs:build",
     "docs:set-env": "cross-env-shell GIT_BRANCH=${GIT_BRANCH:-$(git rev-parse --abbrev-ref HEAD)}",
-    "docs:build": "cross-env-shell ng build --prod --outputPath=docs/${GIT_BRANCH}",
+    "docs:build": "cross-env-shell ng build --configuration=production --output-path=docs/${GIT_BRANCH}",
     "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
     "docs:clean": "rimraf docs",
     "docs:lint": "ng lint ng-vcl-demo",
