--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "docs:clean": "rimraf docs",
     "docs:lint": "ng lint ng-vcl-demo",
     "docs:pull-current": "git clone -b gh-pages --single-branch https://github.com/ng-vcl/ng-vcl.git docs",
+    "format": "prettier --write \"**/*.ts\"",
     "test": "ng test @vcl/ng-vcl --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -81,6 +82,7 @@
     "lerna": "^5.5.0",
     "ng-packagr": "^14.2.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "protractor": "^7.0.0",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
