--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,21 +11,11 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "ES2022",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom",
-      "esnext.asynciterable"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom", "esnext.asynciterable"],
     "paths": {
-      "@vcl/ng-vcl": [
-        "lib/ng-vcl/src"
-      ],
-      "@vcl/ng-vcl/*": [
-        "lib/ng-vcl/src/*"
-      ]
+      "@vcl/ng-vcl": ["lib/ng-vcl/src"],
+      "@vcl/ng-vcl/*": ["lib/ng-vcl/src/*"]
     },
     "useDefineForClassFields": false
   }
