chore: installed subsink

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "rxjs": "^7.8.0",
     "sass": "^1.58.3",
     "sass-loader": "^13.0.2",
+    "subsink": "^1.0.2",
     "tslib": "^2.5.0",
     "zone.js": "^0.12.0"
   },
