--- a/lib/ng-vcl/package.json
+++ b/lib/ng-vcl/package.json
@@ -15,6 +15,7 @@
     "@angular/core": "^15.2.9",
     "@angular/forms": "^15.2.9",
     "@angular/router": "^15.2.9",
+    "subsink": "^1.0.2",
     "rxjs": "^7.8.0"
   }
 }
