--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "fuse.js": "^6.6.2",
     "hammerjs": "^2.0.8",
     "jsonschema": "^1.4.1",
+    "marked": "^4.3.0",
     "ngx-markdown": "^16.0.0",
     "normalize.css": "^8.0.1",
     "raw-loader": "^4.0.2",
