--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "format": "prettier --write \"**/*.ts\"",
     "test": "ng test @vcl/ng-vcl --watch=false",
     "lint": "ng lint",
+    "e2e": "ng e2e",
     "build:clean": "rimraf dist/ng-vcl",
     "build:ng-vcl": "ng build @vcl/ng-vcl",
     "build": "npm-run-all build:clean build:ng-vcl",
@@ -30,16 +31,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@angular/animations": "^16.1.3",
-    "@angular/cdk": "^16.1.3",
-    "@angular/common": "^16.1.3",
-    "@angular/compiler": "^16.1.3",
-    "@angular/core": "^16.1.3",
-    "@angular/elements": "^16.1.3",
-    "@angular/forms": "^16.1.3",
-    "@angular/platform-browser": "^16.1.3",
-    "@angular/platform-browser-dynamic": "^16.1.3",
-    "@angular/router": "^16.1.3",
+    "@angular/animations": "^16.2.1",
+    "@angular/cdk": "^16.2.1",
+    "@angular/common": "^16.2.1",
+    "@angular/compiler": "^16.2.1",
+    "@angular/core": "^16.2.1",
+    "@angular/elements": "^16.2.1",
+    "@angular/forms": "^16.2.1",
+    "@angular/platform-browser": "^16.2.1",
+    "@angular/platform-browser-dynamic": "^16.2.1",
+    "@angular/router": "^16.2.1",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@mdi/font": "^7.1.96",
     "@vcl/vcl": "^2.5.0",
@@ -59,16 +60,11 @@
     "zone.js": "^0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.3",
-    "@angular-devkit/core": "^16.1.3",
-    "@angular-eslint/builder": "^16.0.3",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "^16.0.3",
-    "@angular-eslint/schematics": "^16.0.3",
-    "@angular-eslint/template-parser": "^16.0.3",
-    "@angular/cli": "^16.1.3",
-    "@angular/compiler-cli": "^16.1.3",
-    "@angular/language-service": "^16.1.3",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular-devkit/core": "^16.2.0",
+    "@angular/cli": "^16.2.0",
+    "@angular/compiler-cli": "^16.2.1",
+    "@angular/language-service": "^16.2.1",
     "@types/jasmine": "^4.3.1",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^18.14.0",
@@ -96,6 +92,7 @@
     "pretty-quick": "^3.1.3",
     "protractor": "^7.0.0",
     "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
     "typescript": "^4.9.3",
     "webpack": "^5.74.0"
   },
