--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/node": "^18.14.0",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
+    "codelyzer": "^6.0.2",
     "conventional-changelog-cli": "^2.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
