chore: code refactor

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
   "root": true,
   "ignorePatterns": ["projects/**/*"],
-  "plugins": ["import"],
+  "plugins": ["@angular-eslint/template", "import"],
+  "parser": "@typescript-eslint/parser",
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "overrides": [
     {
       "files": ["*.ts"],
@@ -67,7 +69,9 @@
             ],
             "pathGroupsExcludedImportTypes": ["builtin"]
           }
-        ]
+        ],
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-empty-function": "off"
       }
     },
     {
