--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "format": "prettier --write \"**/*.ts\"",
     "test": "ng test @vcl/ng-vcl --watch=false",
     "lint": "ng lint",
-    "e2e": "ng e2e",
     "build:clean": "rimraf dist/ng-vcl",
     "build:ng-vcl": "ng build @vcl/ng-vcl",
     "build": "npm-run-all build:clean build:ng-vcl",
@@ -60,11 +59,16 @@
     "zone.js": "^0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
-    "@angular-devkit/core": "^16.2.0",
-    "@angular/cli": "^16.2.0",
-    "@angular/compiler-cli": "^16.2.1",
-    "@angular/language-service": "^16.2.1",
+    "@angular-devkit/build-angular": "^16.1.3",
+    "@angular-devkit/core": "^16.1.3",
+    "@angular-eslint/builder": "^16.0.3",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "^16.0.3",
+    "@angular-eslint/schematics": "^16.0.3",
+    "@angular-eslint/template-parser": "^16.0.3",
+    "@angular/cli": "^16.1.3",
+    "@angular/compiler-cli": "^16.1.3",
+    "@angular/language-service": "^16.1.3",
     "@types/jasmine": "^4.3.1",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^18.14.0",
