chore: migrate Sass imports and allow prismjs CommonJS dependency

--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             "sourceMap": true,
             "optimization": false,
             "buildOptimizer": false,
+            "allowedCommonJsDependencies": ["prismjs"],
             "assets": [
               {
                 "glob": "**/*",
